--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~10.2.5",
     "angular-in-memory-web-api": "^0.9.0",
     "core-js": "^2.5.4",
-    "ngx-toastr": "^10.0.4",
+    "ngx-toastr": "13.2.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -34,17 +34,17 @@
     "@types/node": "^12.11.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
+    "tslint": "~6.1.3",
     "typescript": "~4.0.8"
   }
 }
