--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -17,10 +16,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '14'   # compatível com Angular 10
+          node-version: '14'
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./FrontEnd
 
       - name: Build Angular app
         run: npm run build
+        working-directory: ./FrontEnd
+
